# buglog_old

./: .flake8  .gitignore  .pre-commit-config.yaml  main.py  mypy.ini  pyproject.toml
buglog/: config.py  console.py  util.py
