[tool.poetry]
name = "buglog"
version = "0.1.0"
description = "Log what is happening to you"
authors = ["Lain Iwakura <lainiwa@cock.li>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.4"
returns = "^0.13.0"
pyxdg = "^0.26"

[tool.poetry.dev-dependencies]
pudb = "^2019.2"
ipython = "^7.13.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
